# doma

./: LICENSE  README.md  pyproject.toml
src/doma/: app.py  configs.py  core.py  gpu.py  utils.py
tests/: test_cfg_as_opt.py  test_configs_nested.py  test_daemonize.py  test_socket_core.py
